--- a/EduClass.WebApi/EduClass.WebApi.csproj
+++ b/EduClass.WebApi/EduClass.WebApi.csproj
@@ -233,6 +233,7 @@
     <Compile Include="Infrastructure\Mappers\AutoMapperConfig.cs" />
     <Compile Include="Infrastructure\Mappers\GroupMapperProfiles.cs" />
     <Compile Include="Infrastructure\Mappers\PersonMapperProfiles.cs" />
+    <Compile Include="Infrastructure\Mappers\PostMapperProfiles.cs" />
     <Compile Include="Infrastructure\Modules\EntitiesModule.cs" />
     <Compile Include="Infrastructure\Modules\RepositoryModule.cs" />
     <Compile Include="Infrastructure\Modules\SecurityModule.cs" />
@@ -284,6 +285,7 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\CollectionModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
+    <None Include="Properties\PublishProfiles\dfgdf.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
